WP-8804 fixing the + and - alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -12751,8 +12751,8 @@ button.checkbox-clear-all {
   #sidebar .block-menu-block.open h2 {
     background: url('../images/icons/inThisSection-arrow-up-red.svg') no-repeat 85% 47% #f4f4f4;
   }
-  #sidebar .block-menu.open .menu,
-  #sidebar .block-menu-block.open .menu {
+  #sidebar .block-menu.open .content > .menu,
+  #sidebar .block-menu-block.open .content > .menu {
     background: -moz-linear-gradient(rgba(231, 231, 231, 0.5), rgba(255, 255, 255, 0.5)), white;
     background: -o-linear-gradient(rgba(231, 231, 231, 0.5), rgba(255, 255, 255, 0.5)), white;
     background: -webkit-linear-gradient(rgba(231, 231, 231, 0.5), rgba(255, 255, 255, 0.5)), white;
@@ -12761,8 +12761,8 @@ button.checkbox-clear-all {
     display: block;
     padding-left: 36px;
   }
-  #sidebar .block-menu.open .menu .menu,
-  #sidebar .block-menu-block.open .menu .menu {
+  #sidebar .block-menu.open .content > .menu .menu,
+  #sidebar .block-menu-block.open .content > .menu .menu {
     background: transparent;
     border-bottom: 0;
   }
@@ -12792,20 +12792,20 @@ button.checkbox-clear-all {
   }
 }
 @media (min-width: 14.375em) and (max-width: 74.9375em) and (min-width: 37.5em) and (max-width: 74.9375em) {
-  #sidebar .block-menu.open .menu,
-  #sidebar .block-menu-block.open .menu {
+  #sidebar .block-menu.open .content > .menu,
+  #sidebar .block-menu-block.open .content > .menu {
     float: right;
     padding-left: 0;
     width: 60%;
   }
-  #sidebar .block-menu.open .menu .menu,
-  #sidebar .block-menu-block.open .menu .menu {
+  #sidebar .block-menu.open .content > .menu .menu,
+  #sidebar .block-menu-block.open .content > .menu .menu {
     width: 100%;
   }
 }
 @media (min-width: 14.375em) and (max-width: 74.9375em) and (max-width: 37.4375em) {
-  #sidebar .block-menu.open .menu,
-  #sidebar .block-menu-block.open .menu {
+  #sidebar .block-menu.open .content > .menu,
+  #sidebar .block-menu-block.open .content > .menu {
     padding-left: 0;
   }
 }
